--- a/public/login.html
+++ b/public/login.html
@@ -23,8 +23,7 @@
                 <li><a href="doces.html">Receitas doces</a></li>
                 <li><a href="vegetariana.html">Receitas vegetarianas</a></li>
                 <p>|</p>
-                <li><a href="login.html">Login</a></li>
-                <li><a href="cadastro.html">Cadastro</a></li>
+                <li><a href="dashboard.html">🧑🏻‍🍳 Usuário</a></li>
             </ul>
         </nav>
     </header>
@@ -109,6 +108,7 @@
                     sessionStorage.EMAIL_USUARIO = json.email;
                     sessionStorage.NOME_USUARIO = json.nome;
                     sessionStorage.ID_USUARIO = json.idUsuario;
+                    sessionStorage.SENHA_USUARIO = json.senha;
 
                     window.location = "dashboard.html";
 
