--- a/public/receitas/banofe.html
+++ b/public/receitas/banofe.html
@@ -18,16 +18,16 @@
         <div class="logo">By Cooked</div>
         <nav>
             <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../salgados.html">Receitas salgadas</a></li>
-                <li><a href="../doces.html">Receitas doces</a></li>
-                <li><a href="../vegetariana.html">Receitas vegetarianas</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="salgados.html">Receitas salgadas</a></li>
+                <li><a href="doces.html">Receitas doces</a></li>
+                <li><a href="vegetariana.html">Receitas vegetarianas</a></li>
                 <p>|</p>
-                <li><a href="../login.html">Login</a></li>
-                <li><a href="../cadastro.html">Cadastro</a></li>
+                <li><a href="dashboard.html">🧑🏻‍🍳 Usuário</a></li>
             </ul>
         </nav>
     </header>
+    
     <div class="comidas">
         <h1>Banoffee</h1>
 
