--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -7,27 +7,28 @@
     <title>By Cooked</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="./css/dash.css">
-    <link rel="stylesheet" href="./css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+    <script src="./js/sessao.js"></script>
 
 </head>
 
-<body>
+<body onload="validarSessao()">
     <header>
         <div class="logo">By Cooked</div>
         <nav>
             <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./salgados.html">Receitas salgadas</a></li>
-                <li><a href="./doces.html">Receitas doces</a></li>
-                <li><a href="./vegetariana.html">Receitas vegetarianas</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="salgados.html">Receitas salgadas</a></li>
+                <li><a href="doces.html">Receitas doces</a></li>
+                <li><a href="vegetariana.html">Receitas vegetarianas</a></li>
                 <p>|</p>
-                <li><a href="./login.html">Login</a></li>
-                <li><a href="./cadastro.html">Cadastro</a></li>
+                <li><a href="dashboard.html">🧑🏻‍🍳 Usuário</a></li>
             </ul>
         </nav>
     </header>
