--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,7 @@
                 <li><a href="doces.html">Receitas doces</a></li>
                 <li><a href="vegetariana.html">Receitas vegetarianas</a></li>
                 <p>|</p>
-                <li><a href="login.html">Login</a></li>
-                <li><a href="cadastro.html">Cadastro</a></li>
+                <li><a href="dashboard.html">🧑🏻‍🍳 Usuário</a></li>
             </ul>
         </nav>
     </header>
