--- a/public/receitas/alho.html
+++ b/public/receitas/alho.html
@@ -18,16 +18,16 @@
         <div class="logo">By Cooked</div>
         <nav>
             <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../salgados.html">Receitas salgadas</a></li>
-                <li><a href="../doces.html">Receitas doces</a></li>
-                <li><a href="../vegetariana.html">Receitas vegetarianas</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="salgados.html">Receitas salgadas</a></li>
+                <li><a href="doces.html">Receitas doces</a></li>
+                <li><a href="vegetariana.html">Receitas vegetarianas</a></li>
                 <p>|</p>
-                <li><a href="../login.html">Login</a></li>
-                <li><a href="../cadastro.html">Cadastro</a></li>
+                <li><a href="dashboard.html">🧑🏻‍🍳 Usuário</a></li>
             </ul>
         </nav>
     </header>
+    
     <div class="comidas">
         <h1>Risoto de Alho Poró</h1>
 
@@ -101,6 +101,8 @@
     </div>
 </body>
 <script>
+    // Guarda as receitas favoritadas no banquinho de dados.
+
     document.querySelectorAll(".botao-favorito").forEach(botao => {
     botao.addEventListener("click", () => {
         const idReceita = botao.getAttribute("data-receita-id");
