--- a/public/receitas/mochi.html
+++ b/public/receitas/mochi.html
@@ -18,12 +18,12 @@
         <div class="logo">By Cooked</div>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="salgados.html">Receitas salgadas</a></li>
-                <li><a href="doces.html">Receitas doces</a></li>
-                <li><a href="vegetariana.html">Receitas vegetarianas</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="../salgados.html">Receitas salgadas</a></li>
+                <li><a href="../doces.html">Receitas doces</a></li>
+                <li><a href="../vegetariana.html">Receitas vegetarianas</a></li>
                 <p>|</p>
-                <li><a href="dashboard.html">🧑🏻‍🍳 Usuário</a></li>
+                <li><a href="../dashboard.html">🧑🏻‍🍳 Usuário</a></li>
             </ul>
         </nav>
     </header>
@@ -102,63 +102,84 @@
     </div>
 </body>
 <script>
-    document.querySelectorAll(".botao-favorito").forEach(botao => {
-    botao.addEventListener("click", () => {
-        const idReceita = botao.getAttribute("data-receita-id");
-        const favoritado = botao.getAttribute("data-favoritado") === "true";
-        const idUsuario = sessionStorage.ID_USUARIO;
+    var botoes = document.querySelectorAll(".botao-favorito");
 
-        if (!idUsuario) {
-            alert("Você precisa estar logado para favoritar uma receita.");
-            window.location.href = "../login.html";
-            return;
-        }
+    for (var i = 0; i < botoes.length; i++) {
+        var botao = botoes[i];
 
-        const url = favoritado ? "/favoritos/desfavoritar" : "/favoritos/favoritar";
-        const metodo = favoritado ? "DELETE" : "POST";
+        botao.addEventListener("click", function () {
+            var idReceita = this.getAttribute("data-receita-id");
+            var favoritado = this.getAttribute("data-favoritado") === "true";
+            var idUsuario = sessionStorage.ID_USUARIO;
 
-        fetch(url, {
-            method: metodo,
-            headers: {
-                "Content-Type": "application/json"
-            },
-            body: JSON.stringify({
-                idUsuario: idUsuario,
-                idReceita: idReceita
-            })
-        }).then(res => {
-            if (res.ok) {
-                const novoEstado = !favoritado;
-                botao.setAttribute("data-favoritado", novoEstado.toString());
-                botao.innerText = novoEstado ? "💔 Desfavoritar" : "❤️ Favoritar";
-            } else {
-                alert("Erro ao atualizar favorito.");
+            if (!idUsuario) {
+                alert("Você precisa estar logado para favoritar uma receita.");
+                window.location.href = "../login.html";
+                return;
             }
-        }).catch(err => {
-            console.error(err);
-            alert("Erro de conexão.");
-        });
-    });
-});
 
-window.addEventListener("load", () => {
-    const idUsuario = sessionStorage.ID_USUARIO;
-    if (!idUsuario) return;
+            var caminho;
+            var metodo;
 
-    fetch(`/favoritos/listar/${idUsuario}`)
-        .then(res => res.json())
-        .then(favoritos => {
-            const idsFavoritados = favoritos.map(f => f.fk_receitas.toString());
+            if (favoritado) {
+                caminho = "/favoritos/desfavoritar";
+                metodo = "DELETE";
+            } else {
+                caminho = "/favoritos/favoritar";
+                metodo = "POST";
+            }
 
-            document.querySelectorAll(".botao-favorito").forEach(botao => {
-                const idReceita = botao.getAttribute("data-receita-id");
-                if (idsFavoritados.includes(idReceita)) {
-                    botao.setAttribute("data-favoritado", "true");
-                    botao.innerText = "💔 Desfavoritar";
+            fetch(caminho, {
+                method: metodo,
+                headers: {
+                    "Content-Type": "application/json"
+                },
+                body: JSON.stringify({
+                    idUsuario: idUsuario,
+                    idReceita: idReceita
+                })
+            }).then(function (res) {
+                if (res.ok) {
+                    var novoEstado = !favoritado;
+        
+                    botao.setAttribute("data-favoritado", novoEstado.toString());
+                    botao.innerText = novoEstado ? "💔 Desfavoritar" : "❤️ Favoritar";
+                } else {
+                    alert("Erro ao atualizar favorito.");
                 }
+            }).catch(function (err) {
+                console.error(err);
+                alert("Erro de conexão.");
             });
-        })
-        .catch(erro => console.error("Erro ao carregar favoritos:", erro));
-});
+        });
+    }
+
+
+    window.addEventListener("load", () => {
+        const idUsuario = sessionStorage.ID_USUARIO;
+        if (!idUsuario) return;
+
+        fetch(`/favoritos/listar/${idUsuario}`)
+            .then(res => res.json())
+            .then(favoritos => {
+                var idsFavoritados = [];
+
+                for (var i = 0; i < favoritos.length; i++) {
+                    idsFavoritados.push(favoritos[i].fk_receitas.toString());
+                }
+
+                var botoes = document.querySelectorAll(".botao-favorito");
+                for (var c = 0; c < botoes.length; c++) {
+                    var botao = botoes[c];
+                    var idReceita = botao.getAttribute("data-receita-id");
+
+                    if (idsFavoritados.includes(idReceita)) {
+                        botao.setAttribute("data-favoritado", "true");
+                        botao.innerText = "💔 Desfavoritar";
+                    }
+                }
+            })
+            .catch(erro => console.error("Erro ao carregar favoritos:", erro));
+    });
 </script>
 </html>
